--- a/Develop/package.json
+++ b/Develop/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "jquery": "^3.5.0"
+    "jquery": "^3.5.0",
+    "uuid": "^7.0.3"
   }
 }
